--- a/poemify/package.json
+++ b/poemify/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.12",
+    "openai": "^4.87.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
